src/objects/wbsendit__Journey__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Clicked__c</fullName>
        <label>Clicked</label>
        <summarizedField>wbsendit__Journey_Email__c.wbsendit__Clicked__c</summarizedField>
        <summaryForeignKey>wbsendit__Journey_Email__c.wbsendit__Journey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>wbsendit__Journey_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Journey Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__List_Id__c</fullName>
        <inlineHelpText>Campaign Monitor List Id</inlineHelpText>
        <label>List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Opened__c</fullName>
        <label>Opened</label>
        <summarizedField>wbsendit__Journey_Email__c.wbsendit__Opened__c</summarizedField>
        <summaryForeignKey>wbsendit__Journey_Email__c.wbsendit__Journey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>wbsendit__Sent__c</fullName>
        <label>Sent</label>
        <summarizedField>wbsendit__Journey_Email__c.wbsendit__Sent__c</summarizedField>
        <summaryForeignKey>wbsendit__Journey_Email__c.wbsendit__Journey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>wbsendit__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber List</label>
        <referenceTo>wbsendit__Subscriber_List__c</referenceTo>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Journey</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__Status__c</columns>
        <columns>wbsendit__Subscriber_List__c</columns>
        <columns>wbsendit__Trigger_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>